# cpp_indie_studio

./: .codacy.yml  .gitignore  CMakeLists.txt  README.md  WinSetupDirectory.bat
assets/meshs/: bomb.mtl  box.mtl  flames.mtl  foot.mtl  ground.mtl  max-bomb.mtl  perso.b3d  powerup.mtl  speedup.mtl  wallBlue.mtl  wallGreen.mtl
assets/meshs/source/: perso.blend
doc/: README.md
include/: IScene.hpp
include/common/: Music.hpp  vec.hpp
include/engine/: Components.hpp  Entity.cpp  Entity.hpp  GameContainer.hpp  GameEngine.hpp  components.hpp
include/engine/ai/: PlayerAI.cpp  PlayerAI.hpp
include/engine/systems/: BreakDestructibleSystem.cpp  BreakDestructibleSystem.hpp  DespawnSystem.cpp  DespawnSystem.hpp  DisparitionFlammeSystem.cpp  DisparitionFlammeSystem.hpp  ExplosionSystem.cpp  ExplosionSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParseInputSystem.cpp  ParseInputSystem.hpp  PlayerMovement.cpp  PlayerMovement.hpp  PlayerRotationSystem.hpp  PowerUpPickupSystem.hpp  PowerUpRotationSystem.hpp  PutBombSystem.cpp  PutBombSystem.hpp  Systems.hpp
include/entities/: Item.hpp  Object.hpp  Player.hpp
include/enum/: AnimationType.hpp  Directions.hpp  EventEnum.hpp
include/event/: Event.hpp  EventReceiver.hpp
include/gfx/: EventReceiver.hpp  Image2D.hpp  Renderable.hpp  Renderer.hpp
include/interfaces/: IItem.hpp  IObject.hpp  IPlayer.hpp  item.hpp  object.hpp  player.hpp
include/map/: Map.hpp
include/menu/: AMenu.hpp  Launch.hpp  LoadGame.hpp  Pause.hpp  Settings.hpp
include/music/: Music.hpp
include/scenes/: GameScene.cpp  GameScene.hpp  IScene.hpp  ScenesManager.hpp
include/settingManager/: settingManager.hpp
include/world/: World.hpp
includes/: Enum.hpp  Event.hpp
settings/: settings.xml
srcs/: CMakeLists.txt  main.cpp  sfml-audio.lib
srcs/Menu/: AMenu.cpp  Launch.cpp  Settings.cpp  main.cpp
srcs/Music/: Music.cpp
srcs/engine/: Entity.cpp  GameContainer.cpp  GameEngine.cpp
srcs/engine/systems/: BreakDestructibleSystem.cpp  DespawnSystem.cpp  ExplosionSystem.cpp  MovementSystem.cpp  ParseInputSystem.cpp  PlayerMovement.cpp  PlayerRotationSystem.cpp  PowerUpPickupSystem.cpp  PowerUpRotationSystem.cpp  PutBombSystem.cpp
srcs/entities/: Player.cpp
srcs/event/: Event.cpp  EventReceiver.cpp
srcs/gfx/: EventReceiver.cpp  Image2D.hpp  Renderable.cpp  Renderer.cpp
srcs/map/: Map.cpp  Map.hpp
srcs/menu/: AMenu.cpp  Launch.cpp  LoadGame.cpp  Pause.cpp  Settings.cpp
srcs/music/: Music.cpp
srcs/scenes/: ScenesManager.cpp
srcs/settingManager/: SettingManager.hpp  settingManager.cpp
srcs/world/: World.cpp
